--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
 		<center>
 			<tr>
 				<td>
-					We have implemented our approach based on an old version of RDFox. The linux executables are available <a href="https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main/executable">here</a>. <br>
-					- <i>standard</i>: This system uses seminaive algorithm for materialisation and an optimised variant of DRed for incremental maintenance. <br>
-					- <i>HD</i>: This system uses our hypertree decomposition based algorithms. <br>
-					- <i>Combined</i>: This system applies HD algorithms to complex (i.e., cyclic) rules and the standard algorithms to the remaining rules. <br>
+					We have implemented our approach based on an old version of RDFox. The linux executables are available <a href="https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main/executable">here</a> and are explained as follows. <br>
+					- <i>standard</i>: uses seminaive algorithm for materialisation and an optimised variant of DRed for incremental maintenance. <br>
+					- <i>HD</i>: uses our hypertree decomposition based algorithms. <br>
+					- <i>Combined</i>: applies HD algorithms to complex rules and the standard algorithms to the remaining rules. <br>
 					The source code is available upon request at xinyue.zhang AT cs.ox.ac.uk. 
 				</td>
 			</tr>
@@ -275,7 +275,20 @@
 		<center>
 			<tr>
 				<td>
-					The test datasets and Datalog programs used in our paper are available <a href="https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main">here</a>. This repo also includes the instructions to reproduce the experiment results. 
+					The test datasets and Datalog programs used in our paper are available <a href="https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main">here</a>.<br>
+					The data description is shown below: <br>
+					- LUBM/ (containing the rules and data of LUBM)<br>
+					<p>- LUBM-500-split* (the subsections of LUBM-500.nt.tar.bz2)</p> <br>
+					<p>- LUBM_L.dlog (LUBM L rules)</p> <br>
+					<p>- LUBM_L-C.dlog (LUBM L+C rules)</p> <br>
+					- Expressions/ (containing the rules and data of Expression dataset)<br>
+					<p>- exp300.nt.tar.bz2 (the data of Expressions)</p> <br>
+					<p>- exp-rules.dlog (the rules of Expressions)</p> <br>
+					- YAGO/ (containing the rules of YAGO)<br>
+					<p>- yago_rules.dlog (the rules of YAGO)</p><br>
+					<p>- for the datasets of YAGO, please find it <a href="https://github.com/yspark-dblab/gcare">here</a>. We use the GCARE-version of YAGO directly. </p><br>
+
+					This repo also includes the instructions to reproduce the experiment results.
 				</td>
 			</tr>
 		</center>
@@ -296,7 +309,7 @@
 		</tr>
 	</table>
 	<br> 
-
+	<br>
 	<table align=center width=750px>
 		<tr>
 			<td>
@@ -315,16 +328,16 @@
 	<hr>
 	<br>
 
-	<!-- <table align=center width=900px>
+	<table align=center width=900px>
 		<tr>
 			<td width=400px>
 				<left>
-					<center><h4>Acknowledgements</h4></center>
-					The design of this page was borrowed and modified from the template made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a>.
+					<!-- <center><h4>Acknowledgements</h4></center> -->
+					Acknowledgements: The design of this page was borrowed and modified from the template made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a>.
 				</left>
 			</td>
 		</tr>
-	</table> -->
+	</table>
 
 <br>
 </body>
