--- a/index.html
+++ b/index.html
@@ -253,9 +253,11 @@
 			<tr>
 				<td>
 					We have implemented our approach based on an old version of RDFox. The linux executables are available <a href="https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main/executable">here</a> and are explained as follows. <br>
-					- <i>standard</i>: uses seminaive algorithm for materialisation and an optimised variant of DRed for incremental maintenance. <br>
-					- <i>HD</i>: uses our hypertree decomposition based algorithms. <br>
-					- <i>Combined</i>: applies HD algorithms to complex rules and the standard algorithms to the remaining rules. <br>
+					<ul>
+						<li> <i>standard</i>: uses seminaive algorithm for materialisation and an optimised variant of DRed for incremental maintenance. </li>
+						<li> <i>HD</i>: uses our hypertree decomposition based algorithms. </li>
+						<li> <i>Combined</i>: applies HD algorithms to complex rules and the standard algorithms to the remaining rules. </li>
+					</ul>
 					The source code is available upon request at xinyue.zhang AT cs.ox.ac.uk. 
 				</td>
 			</tr>
@@ -277,17 +279,24 @@
 				<td>
 					The test datasets and Datalog programs used in our paper are available <a href="https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main">here</a>.<br>
 					The data description is shown below: <br>
-					- LUBM/ (containing the rules and data of LUBM)<br>
-					<p>- LUBM-500-split* (the subsections of LUBM-500.nt.tar.bz2)</p> <br>
-					<p>- LUBM_L.dlog (LUBM L rules)</p> <br>
-					<p>- LUBM_L-C.dlog (LUBM L+C rules)</p> <br>
-					- Expressions/ (containing the rules and data of Expression dataset)<br>
-					<p>- exp300.nt.tar.bz2 (the data of Expressions)</p> <br>
-					<p>- exp-rules.dlog (the rules of Expressions)</p> <br>
-					- YAGO/ (containing the rules of YAGO)<br>
-					<p>- yago_rules.dlog (the rules of YAGO)</p><br>
-					<p>- for the datasets of YAGO, please find it <a href="https://github.com/yspark-dblab/gcare">here</a>. We use the GCARE-version of YAGO directly. </p><br>
-
+					<ul>
+					<li>LUBM/ (containing the rules and data of LUBM)</li>
+						<ul>
+						<li>LUBM-500-split* (the subsections of LUBM-500.nt.tar.bz2)</li> 
+						<li>LUBM_L.dlog (LUBM L rules)</li> 
+						<li>LUBM_L-C.dlog (LUBM L+C rules)</li> 
+						</ul>
+					<li>Expressions/ (containing the rules and data of Expression dataset)</li>
+						<ul>
+						<p>exp300.nt.tar.bz2 (the data of Expressions)</p> 
+						<p>exp-rules.dlog (the rules of Expressions)</p> 
+						</ul>
+					<li>YAGO/ (containing the rules of YAGO)</li>
+						<ul></ul>
+						<li>yago_rules.dlog (the rules of YAGO)</li>
+						<li>for the datasets of YAGO, please find it <a href="https://github.com/yspark-dblab/gcare">here</a>. We use the GCARE-version of YAGO directly. </li>
+						</ul>
+					</ul>
 					This repo also includes the instructions to reproduce the experiment results.
 				</td>
 			</tr>
@@ -333,7 +342,7 @@
 			<td width=400px>
 				<left>
 					<!-- <center><h4>Acknowledgements</h4></center> -->
-					Acknowledgements: The design of this page was borrowed and modified from the template made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a>.
+					Acknowledgements: The design of this page was modified from the template made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a>.
 				</left>
 			</td>
 		</tr>
