--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
 						</ul>
 					<li>Expressions/ (containing the rules and data of Expression dataset)</li>
 						<ul>
-						<p>exp300.nt.tar.bz2 (the data of Expressions)</p> 
-						<p>exp-rules.dlog (the rules of Expressions)</p> 
+						<li>exp300.nt.tar.bz2 (the data of Expressions)</li> 
+						<li>exp-rules.dlog (the rules of Expressions)</li>
 						</ul>
 					<li>YAGO/ (containing the rules of YAGO)</li>
 						<ul></ul>
@@ -333,7 +333,7 @@
 			</td>
 		</tr>
 	</table>
-	
+
 	<br>
 	<hr>
 
