--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 		<center>
 			<tr>
 				<td>
-					The test datasets and Datalog programs used in our paper are available <a href="https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main">here</a>.<br>
+					The test datasets and Datalog programs used in our paper are available <a href="https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main">here</a>.
 					The data description is shown below: <br>
 					<ul>
 					<li>LUBM/ (containing the rules and data of LUBM)</li>
