--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 			<td><span style="font-size:14pt">Xinyue Zhang, Pan Hu, Yavor Nenov, Ian Horrocks.<br>
 				<b>Enhancing Datalog Reasoning with Hypertree Decompositions.</b><br>
 				In IJCAI, 2023.<br>
-				<a href="https://www.ijcai.org/proceedings/2023/0377.pdf">camera ready</a><br>
+				<a href="https://www.ijcai.org/proceedings/2023/0377">proceedings</a><br>
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
 			</td>
