update standard proceedings

--- a/index.html
+++ b/index.html
@@ -325,12 +325,20 @@
 		<tr>
 			<td>
 				<div style="color:#171B21; background-color:#F5F5F5; border: 1px solid #CCCCCC;; border-radius:5px; padding:10px; font-family: menlo; font-size: 0.8em">
-					@inproceedings{zhang2023enhancing,<br>
-					&nbsp title={Enhancing Datalog Reasoning with Hypertree Decompositions},<br>
-					&nbsp author={Zhang, Xinyue and Hu, Pan and Nenov, Yavor and Horrocks, Ian},<br>
-					&nbsp booktitle={International Joint Conferences on Artificial Intelligence},<br>
-					&nbsp year={2023}<br>
-					  }
+					@inproceedings{ijcai2023p0377, <br>
+						&nbsp title     = {Enhancing Datalog Reasoning with Hypertree Decompositions}, <br>
+						&nbsp author    = {Zhang, Xinyue and Hu, Pan and Nenov, Yavor and Horrocks, Ian},<br>
+						&nbsp booktitle = {Proceedings of the Thirty-Second International Joint Conference on
+									 Artificial Intelligence, {IJCAI-23}},<br>
+						&nbsp publisher = {International Joint Conferences on Artificial Intelligence Organization},<br>
+						&nbsp editor    = {Edith Elkind},<br>
+						&nbsp pages     = {3383--3393},<br>
+						&nbsp year      = {2023},<br>
+						&nbsp month     = {8},<br>
+						&nbsp note      = {Main Track},<br>
+						&nbsp doi       = {10.24963/ijcai.2023/377},<br>
+						&nbsp url       = {https://doi.org/10.24963/ijcai.2023/377},<br>
+					  }					  
 				</div>
 			</td>
 		</tr>
