--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					</td>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:24px"><a href='https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main'>[GitHub]</a></span><br>
+							<span style="font-size:24px"><a href='https://github.com/xyzBubble/HDReasoning-Benchmarks/tree/main'>[Benchmarks]</a></span><br>
 						</center>
 					</td>
 				</tr>
